add read file function

--- a/GraphSummaryCuda.vcxproj
+++ b/GraphSummaryCuda.vcxproj
@@ -64,6 +64,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <EmbedManifest>false</EmbedManifest>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
@@ -147,8 +148,8 @@ copy "$(CudaToolkitBinDir)\cudart*.dll" "$(OutDir)"</Command>
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <CudaCompile Include="file_reader.cu" />
-    <CudaCompile Include="kernel.cu" />
+    <CudaCompile Include="CuGreddyMain.cc" />
+    <CudaCompile Include="file_reader.cc" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="file_reader.h" />
